# combobulator_demo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
Source/: AudioBufferQueue.h  Defines.h  ModelLibrary.cpp  ModelLibrary.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Processors/: DelayProcessor.cpp  DelayProcessor.h  FilterProcessor.cpp  FilterProcessor.h  LFOProcessor.cpp  LFOProcessor.h  MathUtils.h  ModMatrix.cpp  ModMatrix.h  ModelProcessor.cpp  ModelProcessor.h  PitchShiftProcessor.cpp  PitchShiftProcessor.h  ProcessorBase.cpp  ProcessorBase.h
Source/Processors/signalsmith-stretch/: signalsmith-stretch.h
Source/WebUI/: BrowserComponent.cpp  BrowserComponent.h  BrowserIntegration.cpp  BrowserIntegration.h  BrowserIntegrationClient.cpp  BrowserIntegrationClient.h  BrowserIntegrationPluginClient.cpp  BrowserIntegrationPluginClient.h  BrowserValueTreeSynchroniser.cpp  BrowserValueTreeSynchroniser.h  BufferCollector.h  BufferSender.h
js/: package.json  tsconfig.json
js/src/: App.tsx  index.css
js/src/components/: MainPanel.tsx  ModelBrowser.tsx  ModulationPopover.tsx  Modulators.tsx  ParameterDial.tsx
js/src/components/modulators/: EmptySlot.tsx  LFO.tsx  Modulator.tsx
js/src/components/modules/: Delay.tsx  Latents.tsx  Module.tsx  Output.tsx  PitchShift.tsx  ThreeBandEQ.tsx
js/src/config/autogenerated/: parameters.ts
js/src/hooks/: useDrag.ts
js/src/juceIntegration/: JuceIntegration.tsx  juceCommunication.ts
js/src/juceIntegration/messages/: pluginMessages.ts
js/src/juceIntegration/models/: ParametersModel.ts
js/src/juceIntegration/valueTree/: InputStream.ts  ValueTreeSynchroniser.ts
